file(GLOB_RECURSE SOURCE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)

add_library(Bank ${SOURCE_FILES})

install(DIRECTORY ${PROJECT_SOURCE_DIR}/BankAccount DESTINATION include COMPONENT headers FILES_MATCHING PATTERN "*.hpp" PATTERN "*.hxx")

install(TARGETS Bank LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT libraries)